mattermost2.yml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mattermost-flg
    name: mattermost-flg
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: mattermost/mattermost-prod-app
      from:
        kind: DockerImage
        name: mattermost/mattermost-prod-app
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mattermost-flg
    name: mattermost-flg
  spec:
    replicas: 1
    selector:
      app: mattermost-flg
      deploymentconfig: mattermost-flg
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mattermost-flg
          deploymentconfig: mattermost-flg
      spec:
        containers:
        - image: mattermost/mattermost-prod-app
          name: mattermost-flg
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /mattermost/plugins
            name: mattermost-flg-volume-1
          - mountPath: /mattermost/client/plugins
            name: mattermost-flg-volume-2
          - mountPath: /mattermost/config
            name: mattermost-flg-volume-3
          - mountPath: /mattermost/data
            name: mattermost-flg-volume-4
          - mountPath: /mattermost/logs
            name: mattermost-flg-volume-5
        volumes:
        - emptyDir: {}
          name: mattermost-flg-volume-1
        - emptyDir: {}
          name: mattermost-flg-volume-2
        - emptyDir: {}
          name: mattermost-flg-volume-3
        - emptyDir: {}
          name: mattermost-flg-volume-4
        - emptyDir: {}
          name: mattermost-flg-volume-5
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mattermost-flg
        from:
          kind: ImageStreamTag
          name: mattermost-flg:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mattermost-flg
    name: mattermost-flg
  spec:
    ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: mattermost-flg
      deploymentconfig: mattermost-flg
  status:
    loadBalancer: {}
kind: List
metadata: {}
